Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.
! Broken/Alert

~~~~~~~~~~~~0.0.1 Revitalize 2-23-2023 xx.xx P.M~~~~~~~~~~~~~~
+Crafting Blueprints use new data format to be able to unlock multiple recipes at once.

~~~~~~~~~~~~0.0.1 Revitalize 2-21-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added in StorageBags, which are portable, yet smaller ItemVaults. Can be bought from the Adventure's Guild once certain backpack upgrades have been obtained.
+Added a code feature to allow for scaling animation frames, allowing for higher-res textures for certain objects.

~~~~~~~~~~~~0.0.1 Revitalize 2-15-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added ColorPicking to ItemVaults so that way they can be dyed in the exact same manner as chests can.

~~~~~~~~~~~~0.0.1 Revitalize 2-12-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added new storage options: Item vaults. Come in 4 sizes that can hold 2 to 5 chests worth of contents depending on the version. Sold by Clint.
~Updated SDVRevitalizeCreationTool to use Godot 4.0 and .Net 6.0.
+Added ItemVault compatibility to Automate+Revitalize mod.
~Migrated Revitalize from old AsssetEdit code to new SMAPI 4.0 Asset Request Events.

~~~~~~~~~~~~0.0.1 Revitalize 2-2-2023 xx.xx P.M~~~~~~~~~~~~~~
~Migrated all item ids that used Revitalize to use the standard accepted <ModAuthor>.<ModName> format, in this case Omegasis.Revitalize
~Migrated all XML Serlaization Types to use the same convention of "Mod_Omegasis.Revitalize" instead of "Mod_Revitalize"
~Fixed a bug with PoweredMachine input to properly display an error message when a lack of energy input (batteries, coal, etc) was not present.
~Fixed a bug when interacting with a PoweredMachine while holding no active item in the Player's hand causing an error to occur.

~~~~~~~~~~~~0.0.1 Revitalize 1-24-2023 xx.xx P.M~~~~~~~~~~~~~~
+Migrated all mining drill outputs to ProcessingRecipe format .json files.