@@ -5,6 +5,9 @@ Key:
 ! Broken/Alert
 
 ~~~~~~~~~~~~0.0.1 Revitalize 2-23-2023 xx.xx P.M~~~~~~~~~~~~~~
+~Fix displaying crafting recipe output multiple time for same object crafting in many ways.
+
+~~~~~~~~~~~~0.0.1 Revitalize 2-23-2023 xx.xx P.M~~~~~~~~~~~~~~
 +Crafting Blueprints use new data format to be able to unlock multiple recipes at once.
 
 ~~~~~~~~~~~~0.0.1 Revitalize 2-21-2023 xx.xx P.M~~~~~~~~~~~~~~
